# direct3dworld

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  base_direct.cpp  base_direct.h  godlike.cpp  im_direct.cpp  im_direct.h  image.cpp  image.h  pixel.hlsl  screenutils.cpp  screenutils.h  test.cpp  type.h  vertex.hlsl
